tests/vendor/ctypeslib2/test/data/test-error1.h
typedef enum {
        ENUM
} E;

axasxas // error
N LN LNKLNLN
# klN L
typedef struct S {
        E e;
} SS;